# griffinbot

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  config-default.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.json  pyproject.toml  setup.cfg  start.bat  start.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/spelling/: allow.txt  excludes.txt  patterns.txt
.github/workflows/: build.yml  codeql-analysis.yml  dependabot-auto-merge.yml  lint-test.yml  python-package.yml  spelling.yml  stale.yml  status-embed.yml
griffinbot/: __init__.py  __main__.py  constants.py  logging.py
griffinbot/exts/: minesweeper.py  status.py
